# electro-synthe

./: .clang-format-ignore  .gitignore  INTERFACE.md  RAPPORT.md  README.md  meson.build
app/: gui_test.c  main.c  meson.build
dsp/: adsr.c  dsp_adsr.c  dsp_api.c  dsp_oscillator.c  dsp_utils.c  dsp_voice.c  meson.build  oscillator.c  utils_dsp.c  voice.c
include/: adsr.h  config_dsp.h  custom_math.h  dsp_adsr.h  dsp_api.h  dsp_config.h  dsp_oscillator.h  dsp_utils.h  dsp_voice.h  gui_components.h  gui_envelop.h  gui_envelope.h  gui_enveloppe.h  gui_help.h  gui_interface.h  gui_oscillator.h  gui_output.h  gui_piano.h  input.h  oscillator.h  utils_dsp.h  utils_files.h  utils_maths.h  voice.h
src/: custom_math.c  gui.c  gui_components.c  gui_envelop.c  gui_envelope.c  gui_enveloppe.c  gui_help.c  gui_oscillator.c  gui_output.c  gui_piano.c  input.c  io.c  meson.build  raygui_impl.c  utils_files.c
subprojects/: raylib.wrap
